--- a/index.html
+++ b/index.html
@@ -64,24 +64,22 @@
           height="25%"
         />
         <!-- Textfield with Floating Label -->
-
         <form action="#">
           <div
             class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
           >
-            <input class="mdl-textfield__input" type="text" id="sample3" />
-            <label class="mdl-textfield__label" for="sample3">Text...</label>
+            <input class="mdl-textfield__input" type="text" id="num1" />
+            <label class="mdl-textfield__label" for="num1">Text...</label>
           </div>
         </form>
         <p>÷</p>
         <!-- Textfield with Floating Label -->
-
         <form action="#">
           <div
             class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
           >
-            <input class="mdl-textfield__input" type="text" id="sample3" />
-            <label class="mdl-textfield__label" for="sample3">Text...</label>
+            <input class="mdl-textfield__input" type="text" id="num2" />
+            <label class="mdl-textfield__label" for="num2">Text...</label>
           </div>
         </form>
         <!-- Raised button with ripple -->
