--- a/index.html
+++ b/index.html
@@ -56,32 +56,30 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <p>division! Insert 2 numbers here:</p>
+        <p id="text">division! Insert 2 numbers here:</p>
         <img
           src="./images/notebook-animation.svg"
           alt="Computer"
           width="25%"
           height="25%"
         />
-        <!-- Textfield with Floating Label -->
-        <form action="#">
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
-            <input class="mdl-textfield__input" type="text" id="num1" />
-            <label class="mdl-textfield__label" for="num1">Text...</label>
-          </div>
-        </form>
+        <!-- Numeric Textfield with Floating Label -->
+<form action="#">
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="number1">
+    <label class="mdl-textfield__label" for="number1">Dividend...</label>
+    <span class="mdl-textfield__error">Input is not a number!</span>
+  </div>
+</form>
         <p>÷</p>
-        <!-- Textfield with Floating Label -->
-        <form action="#">
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
-            <input class="mdl-textfield__input" type="text" id="num2" />
-            <label class="mdl-textfield__label" for="num2">Text...</label>
-          </div>
-        </form>
+        <!-- Numeric Textfield with Floating Label -->
+<form action="#">
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="number2">
+    <label class="mdl-textfield__label" for="number2">Divisor...</label>
+    <span class="mdl-textfield__error">Input is not a number!</span>
+  </div>
+</form>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
